<resources>
    <string name="app_name">UmakGymReserve</string>
    <string name="title_page">UMAK FITNESS \nGYM RESERVATION</string>
    <string name="todo">TODO</string>
    <string name="button_start">GET STARTED</string>
    <string name="login_register">LOGIN / REGISTER</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_any_account_click_sign_up">Don\'t have any account? Click \'SIGN UP\'</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_title">SIGN-UP</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="enter_first_name">ENTER FIRST NAME</string>
    <string name="enter_last_name">ENTER LAST NAME</string>
    <string name="student">STUDENT</string>
    <string name="employee">EMPLOYEE</string>
    <string name="alumni">ALUMNI</string>
    <string name="the_price_of_the_reserve_will_be">THE PRICE OF THE RESERVE WILL BE:</string>
    <string name="type">TYPE:</string>
    <string name="stud_price_results">THE PRICE OF THE RESERVE WILL BE: 30 PHP</string>
    <string name="price_employee_results">THE PRICE OF THE RESERVE WILL BE: 20 PHP</string>
    <string name="price_alumni_results">THE PRICE OF THE RESERVE WILL BE: 50 PHP</string>
    <string name="enter_umak_email">ENTER UMAK EMAIL</string>
    <string name="confirm_button">CONFIRM</string>
    <string name="to_send_otp_verification_to">TO SEND OTP VERIFICATION TO</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="umak_email"><![CDATA[<umak-email>]]></string>
    <string name="click_the_send_otp">Click the \'SEND OTP\'</string>
    <string name="send_otp">SEND OTP</string>
    <string name="otp_code">OTP CODE:</string>
    <string name="one_time_password_code">One-Time-Password Code</string>
    <string name="confirm">CONFIRM</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_username">CREATE USERNAME</string>
    <string name="create_password">CREATE PASSWORD</string>
    <string name="reservation_page">RESERVATION PAGE</string>
    <string name="umak_fitness_gym">UMak Fitness Gym</string>
    <string name="back_to_home">Back to Home</string>
    <string name="attention_all_university_fitness_gym_users_n_neffective_april_22_2024_there_will_be_a_change_in_the_usage_fees_for_the_university_fitness_gym_please_refer_the_updated_fee_schedule_below_n_n_n_nstudents_p30_00_per_session_n_nfaculty_employee_p20_00_per_session_n_nalumni_p50_00_per_session_n_n_n_nthank_you_for_your_understanding_and_cooperation_n_nstay_healthy_and_active">Attention all University Fitness Gym Users! \n\nEffective April 22, 2024, there will be a change in the usage fees for the University Fitness Gym. Please refer the updated fee schedule below:\n\n\n\nStudents: P30.00 per session\n\nFaculty/Employee: P20.00 per session\n\nAlumni: P50.00 per session\n\n\n\nThank you for your understanding and cooperation.\n\nStay healthy and active!</string>
</resources>