<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#cfcf8c"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="56sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/etCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="164dp"
        android:layout_marginRight="50sp"
        android:hint="@string/create_username"
        android:textColor="#cfcf8c"
        android:textColorHint="#cfcf8c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="260dp"
        android:layout_marginRight="50sp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:textColor="#cfcf8c"
        android:textColorHint="#cfcf8c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirmAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:background="@drawable/rounded_border_trans"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:fontFamily="@font/roboto"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="#cfcf8c"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/confirm_button"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>